force-app/main/default/objects/NPS_transaccional__c/NPS_transaccional__c.object-meta.xml
<CustomObject>
    <description>Encuestas NPS trasaccional</description>
    <label>NPS transaccional</label>
    <nameField>
        <displayFormat>NPS{000000}</displayFormat>
        <label>Nombre de NPS transaccional</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPS transaccional</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>