force-app/main/default/objects/NPS_transaccional__c/fields/Atenci_n_recibida_telef_nicamente__c.field-meta.xml
<CustomField>
    <fullName>Atenci_n_recibida_telef_nicamente__c</fullName>
    <inlineHelpText>3.-  Atención recibida telefónicamente</inlineHelpText>
    <label>Atención recibida telefónicamente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>