force-app/main/default/objects/NPS_transaccional__c/fields/Claridad_y_comprensi_n_de_las_facturas__c.field-meta.xml
<CustomField>
    <fullName>Claridad_y_comprensi_n_de_las_facturas__c</fullName>
    <inlineHelpText>2. Claridad y comprensión de las facturas</inlineHelpText>
    <label>Claridad y comprensión de las facturas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>