force-app/main/default/objects/NPS_transaccional__c/fields/Claridad_y_comprensi_n_documentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Claridad_y_comprensi_n_documentaci_n__c</fullName>
    <label>Claridad y comprensión documentación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>