force-app/main/default/objects/NPS_transaccional__c/fields/cuenta_relacionada__c.field-meta.xml
<CustomField>
    <fullName>cuenta_relacionada__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cuenta Relacionada</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPS transaccional</relationshipLabel>
    <relationshipName>NPS_transaccional</relationshipName>
    <type>Lookup</type>
</CustomField>