force-app/main/default/objects/NPS_transaccional__c/fields/Cumplimiento_de_los_plazos__c.field-meta.xml
<CustomField>
    <fullName>Cumplimiento_de_los_plazos__c</fullName>
    <label>Cumplimiento de los plazos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>