force-app/main/default/objects/NPS_transaccional__c/fields/fecha_respuesta__c.field-meta.xml
<CustomField>
    <fullName>fecha_respuesta__c</fullName>
    <description>Fecha en la que se se recibe la respuesta.</description>
    <inlineHelpText>Fecha en la que se se recibe la respuesta.</inlineHelpText>
    <label>Fecha respuesta</label>
    <type>Date</type>
</CustomField>