force-app/main/default/objects/NPS_transaccional__c/fields/Informaci_n_proceso_baja__c.field-meta.xml
<CustomField>
    <fullName>Informaci_n_proceso_baja__c</fullName>
    <inlineHelpText>Gracias por haber confiado en nosotros</inlineHelpText>
    <label>Información proceso baja</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>