force-app/main/default/objects/NPS_transaccional__c/fields/Instalaci_n_grado_satisfacci_n__c.field-meta.xml
<CustomField>
    <fullName>Instalaci_n_grado_satisfacci_n__c</fullName>
    <inlineHelpText>2. Mantenimiento de instalación: Grado de satisfacción del mismo</inlineHelpText>
    <label>Instalación: grado satisfacción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>