force-app/main/default/objects/NPS_transaccional__c/fields/Instalaci_n_puntualidad__c.field-meta.xml
<CustomField>
    <fullName>Instalaci_n_puntualidad__c</fullName>
    <inlineHelpText>1. Mantenimiento de  instalación: puntualidad y profesionalidad del personal involucrado</inlineHelpText>
    <label>Instalación : puntualidad y profesionali</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>