force-app/main/default/objects/NPS_transaccional__c/fields/Nos_permite_tratar_sus_valoraciones__c.field-meta.xml
<CustomField>
    <fullName>Nos_permite_tratar_sus_valoraciones__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si fuese necesario, ¿nos permite tratar sus valoraciones con nuestro servicio de gestión de incidencias?</description>
    <inlineHelpText>Si fuese necesario, ¿nos permite tratar sus valoraciones con nuestro servicio de gestión de incidencias?</inlineHelpText>
    <label>¿Nos permite tratar sus valoraciones?</label>
    <type>Checkbox</type>
</CustomField>