force-app/main/default/objects/NPS_transaccional__c/fields/Profesionalidad_desmantelamiento__c.field-meta.xml
<CustomField>
    <fullName>Profesionalidad_desmantelamiento__c</fullName>
    <description>2.- Puntualidad y profesionalidad durante el proceso de desmantelamiento de la instalación</description>
    <label>Profesionalidad desmantelamiento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>