force-app/main/default/objects/NPS_transaccional__c/fields/Profesionalidad_personal_del_equipo_de_P__c.field-meta.xml
<CustomField>
    <fullName>Profesionalidad_personal_del_equipo_de_P__c</fullName>
    <label>Profesionalidad equipo Primagas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>