force-app/main/default/objects/NPS_transaccional__c/fields/Rapidez_en_la_resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Rapidez_en_la_resoluci_n__c</fullName>
    <inlineHelpText>2. Claridad y rapidez en la resolución</inlineHelpText>
    <label>Rapidez en la resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>