force-app/main/default/objects/NPS_transaccional__c/fields/Satisfacci_n_a_la_resoluci_n__c.field-meta.xml
<CustomField>
    <fullName>Satisfacci_n_a_la_resoluci_n__c</fullName>
    <inlineHelpText>1. Grado de satisfacción a la resolución</inlineHelpText>
    <label>Satisfacción a la resolución</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>