force-app/main/default/objects/NPS_transaccional__c/fields/Sugerencias__c.field-meta.xml
<CustomField>
    <fullName>Sugerencias__c</fullName>
    <label>Sugerencias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>