force-app/main/default/objects/NPS_transaccional__c/fields/Suministro_puntualidad_y_profesionalida__c.field-meta.xml
<CustomField>
    <fullName>Suministro_puntualidad_y_profesionalida__c</fullName>
    <inlineHelpText>1. Suministro: puntualidad y profesionalidad del personal involucrado</inlineHelpText>
    <label>Suministro: puntualidad y profesionalida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Satisfacci_n_global</valueSetName>
    </valueSet>
</CustomField>