force-app/main/default/objects/NPS_transaccional__c/recordTypes/Ay_danos_a_mejorar.recordType-meta.xml
<RecordType>
    <fullName>Ay_danos_a_mejorar</fullName>
    <active>true</active>
    <description>Ayúdanos a mejorar</description>
    <label>Ayúdanos a mejorar</label>
</RecordType>