force-app/main/default/objects/NPS_transaccional__c/recordTypes/Bienvenido_a_Primagas.recordType-meta.xml
<RecordType>
    <fullName>Bienvenido_a_Primagas</fullName>
    <active>true</active>
    <description>Bienvenido a Primagas</description>
    <label>Bienvenido a Primagas</label>
</RecordType>