force-app/main/default/objects/NPS_transaccional__c/recordTypes/Gracias_por_haber_confiado_en_nosotros.recordType-meta.xml
<RecordType>
    <fullName>Gracias_por_haber_confiado_en_nosotros</fullName>
    <active>true</active>
    <description>Gracias por haber confiado en nosotros</description>
    <label>Gracias por haber confiado en nosotros</label>
</RecordType>