force-app/main/default/objects/NPS_transaccional__c/recordTypes/Tu_experiencia_con_nosotros_2.recordType-meta.xml
<RecordType>
    <fullName>Tu_experiencia_con_nosotros_2</fullName>
    <active>true</active>
    <description>Tu experiencia con nosotros 2</description>
    <label>Tu experiencia con nosotros 2</label>
</RecordType>