force-app/main/default/objects/NPS_transaccional__c/listViews/adios.listView-meta.xml
<ListView>
    <fullName>adios</fullName>
    <columns>NAME</columns>
    <columns>Informaci_n_proceso_baja__c</columns>
    <columns>Profesionalidad_desmantelamiento__c</columns>
    <columns>Atenci_n_recibida_telef_nicamente__c</columns>
    <columns>NPS__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS_transaccional__c.Gracias_por_haber_confiado_en_nosotros</value>
    </filters>
    <label>Adiós</label>
    <language>es</language>
</ListView>