force-app/main/default/objects/NPS_transaccional__c/listViews/Bienvenido.listView-meta.xml
<ListView>
    <fullName>Bienvenido</fullName>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Claridad_y_comprensi_n_documentaci_n__c</columns>
    <columns>Profesionalidad_personal_del_equipo_de_P__c</columns>
    <columns>Cumplimiento_de_los_plazos__c</columns>
    <columns>NPS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS_transaccional__c.Bienvenido_a_Primagas</value>
    </filters>
    <label>Bienvenido</label>
</ListView>