force-app/main/default/objects/NPS_transaccional__c/listViews/Tu_experiencia_1.listView-meta.xml
<ListView>
    <fullName>Tu_experiencia_1</fullName>
    <columns>Suministro_puntualidad_y_profesionalida__c</columns>
    <columns>Claridad_y_comprensi_n_de_las_facturas__c</columns>
    <columns>NPS__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS_transaccional__c.Tu_experiencia_con_nosotros_1</value>
    </filters>
    <label>Tu experiencia 1</label>
    <language>es</language>
</ListView>