force-app/main/default/objects/NPS_transaccional__c/listViews/Tu_experiencia_2.listView-meta.xml
<ListView>
    <fullName>Tu_experiencia_2</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Instalaci_n_puntualidad__c</columns>
    <columns>Instalaci_n_grado_satisfacci_n__c</columns>
    <columns>NPS__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>fecha_respuesta__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NPS_transaccional__c.Tu_experiencia_con_nosotros_2</value>
    </filters>
    <label>Tu experiencia 2</label>
    <language>es</language>
</ListView>